ofVideoPlayer::idleMovie() is deprecated. Use ofVideoPlayer::update() instead

---------------------------------------------------------------
	  .oooo.     .oooo.    ooooooooo   .o  
	 d8P'`Y8b   d8P'`Y8b  d"""""""8' o888  
	888    888 888    888       .8'   888  
	888    888 888    888      .8'    888  
	888    888 888    888     .8'     888  
	`88b  d88' `88b  d88'    .8'      888  
	 `Y8bd8P'   `Y8bd8P'    .8'      o888o 

OF 0071, changelog:

key:
+ = added
- = subtracted
/ = modified
---------------------------------------------------------------

The main focus for 0071 was to add new examples to better show the features added in 007. 
0071 is mainly an 'examples + bug fixes' release, with some additional, much needed, updating to the mobile releases ( iOS and Android ). 

Critical changes ( might need to update your projects to fix )
* ofEvents -> ofEvents() singleton - this means that projects which register calls using "ofEvents." will need to replace these with "ofEvents()." (note the parentheses).
* OF Examples now are found in the "examples/" folder in the root of the OF folder. The "apps/" is still included but is kept empty as a place to put your OF apps and experiments. 
* Because of the project generator (see below) some addons have been standardized, and we've added "addons.make" to each project file that uses addons.  Prior to this release, addons.make was only used on linux / android platforms.  As we develop the project generator, we'll work to document these changes. 
* audioRequested and audioReceived on the ofBaseApp/testApp are now called audioOut and audioIn


Project generator